styles update and loadbug Fix
added icons to buttons Style to scrollbar
fixed bug with image loading after refresh

--- a/Styles.css
+++ b/Styles.css
@@ -5,10 +5,21 @@
     --borderColor: #818181;
     --mainColor: rgb(223, 223, 223);
     --seconderyColor: rgb(255, 255, 255);
-    --themeDotBorder: rgb(56, 56, 56);
-    --previewBg: rgba(255, 249, 206, 0.555);
-    --previewShadowBg: rgb(255, 248, 202);
     --btnColor: rgb(49, 49, 49);
+}
+
+
+body::-webkit-scrollbar {
+    width: 1em;
+}
+   
+body::-webkit-scrollbar-track {
+    box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
+}
+   
+body::-webkit-scrollbar-thumb {
+    background-color: darkgrey;
+    outline: 1px solid slategrey;
 }
 
 html,
@@ -52,23 +63,32 @@ strong {
     border-radius: 5px 5px 0 0;
     -webkit-box-shadow: 2px 0px 20px 2px rgba(0, 0, 0, 0.86);
     box-shadow: 2px 0px 20px 2px rgba(0, 0, 0, 0.86);
+    margin: 0 auto;
+    display: flex;
+    flex-direction: column;
 }
+.form-group{
+    width: 100%;
+}
+
 #banners-list{
     display: flex;
     justify-content: center;
     flex-wrap: wrap;
+    overflow: hidden;
 }
 
 .s1 {
     background-color: var(--mainColor);
-    
-    padding: 10px;
-
+    padding: 5px;
     border-bottom: 1px solid var(--borderColor);
     overflow: auto;
+    
 }
 
 .s2 {
+    padding: 5px;
+
     background-color: var(--seconderyColor);
     border-bottom: 1px solid var(--borderColor);
     overflow: auto;
@@ -78,6 +98,21 @@ strong {
     width: 100%;
     margin: 0 auto;
 }
+
+.icon{
+    width: 30px;
+    height: 30px;
+    margin: 1px;
+    padding: 1px;
+    border-radius: 5px;
+    background-color: #fff;
+  
+}
+button{
+    border: none;
+    background-color: transparent;
+}
+
 .form-input {
     margin: 10px auto;
     width: 99%;
@@ -91,6 +126,8 @@ strong {
     -webkit-box-shadow: 0px 0px 16px -4px #000000;
     box-shadow: 0px 0px 16px -4px #000000;  
 }
+
+
 #submit-btn {
     margin-top: 10px;
     width: 100%;
@@ -99,6 +136,7 @@ strong {
     color: #fff;
     background-color: var(--btnColor);
     border: none;
+    font-family: 'Russo One', sans-serif;
     border-radius: 2px;
     cursor: pointer;
 }
@@ -111,29 +149,27 @@ strong {
 }
 
 p,
-li,
-span,
 label,
-input,
-textarea {
+input {
     color: var(--seconderyText);
     font-family: 'Roboto Mono', monospace;
     font-size: 14px;
 }
 
 img{
-    margin: 10px;
-    -webkit-box-shadow: 2px 0px 20px 2px rgba(0, 0, 0, 0.86);
-    box-shadow: 2px 0px 20px 2px rgba(0, 0, 0, 0.86);
+    margin: 15px;
+    -webkit-box-shadow: 2px 0px 8px 2px rgba(0, 0, 0, 0.86);
+    box-shadow: 2px 0px 8px 2px rgba(0, 0, 0, 0.86);
     border: 1px solid var(--borderColor);
 }
 .nav{
     position: fixed;
-    top: 40px;
-    right: 10px;
+    top: 10px;
+    right: 5px;
     background-color: transparent;
+    z-index: 100;
 }
-#myBtn {
+#topBtn {
     display: none;
     position: fixed;
     bottom: 20px;
@@ -151,7 +187,7 @@ img{
     box-shadow: 2px 0px 20px 2px rgba(0, 0, 0, 0.86);
   }
   
-  #myBtn:hover {
+  #topBtn:hover {
     background-color: #555;
   }
 /* 
@@ -159,3 +195,41 @@ img{
     border-radius: 25%;
     border: 1px solid var(--borderColor);
 } */
+img  {
+    -webkit-animation: fadein 2s; /* Safari, Chrome and Opera > 12.1 */
+    -moz-animation: fadein 2s; /* Firefox < 16 */
+    -ms-animation: fadein 2s; /* Internet Explorer */
+    -o-animation: fadein 2s; /* Opera < 12.1 */
+    animation: fadein 2s;
+}
+
+img:hover{
+    opacity: 95%;
+    cursor: pointer;
+    transform: scale(1.05);
+}
+
+
+/*  Fade in Effect for banners in list display */
+@keyframes fadein {
+    from { opacity: 0; }
+    to   { opacity: 1; }
+}
+
+/* Firefox < 16 */
+@-moz-keyframes fadein {
+    from { opacity: 0; }
+    to   { opacity: 1; }
+}
+
+/* Safari, Chrome and Opera > 12.1 */
+@-webkit-keyframes fadein {
+    from { opacity: 0; }
+    to   { opacity: 1; }
+}
+
+/* Internet Explorer */
+@-ms-keyframes fadein {
+    from { opacity: 0; }
+    to   { opacity: 1; }
+}
